<resources>
    <string name="app_name">Anon Whispers</string>
    <string name="login">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="olvi_contra">¿Olvidaste tu contraseña?</string>
    <string name="Inicio">Inicia sesión con:</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="tipo_de">Tipo de</string>
    <string name="denuncia">denuncia</string>
    <string name="anon_denuncia">En esta denuncia tus datos personales tales como tu nombre, direccion,  telefono, etc, no seran compartidos.
Esto con el fin de proteger la identidad del usuario.</string>
    <string name="btn_anonima">ANÓNIMA</string>
    <string name="publica">En esta denuncia todos tus datos seran incluidos al momento de emitirla, con el fin de contactarte en caso de una respuesta por parte de las autoridades</string>
    <string name="btn_publica">PÚBLICA</string>
    <string name="leer_documento">Lee nuestra politica de privacidad para mayor informacion antes de realizar una denuncia</string>
    <string name="btn_leer_documento">LEER DOCUMENTO</string>
    <string name="datos_per">Datos Personales</string>
    <string name="desc_datos_per">Te recordamos que tus datos personales no serán compartidos, a menos que desees que tu denuncia no sea anónima.</string>
    <string name="nombre">Nombre (s)</string>
    <string name="apellido_p">Apellido paterno</string>
    <string name="apellido_m">Apellido materno</string>
    <string name="genero">Género</string>
    <string name="edad">Edad</string>
    <string name="ocupacion">Ocupación</string>
    <string name="escolaridad">Escolaridad</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="no_decir">Prefiero no decirlo</string>
    <string name="enviar">Guardar</string>
    <string name="correo">Correo electrónico</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="registro">Registro</string>
    <string name="registrar">REGISTRARSE</string>
</resources>